// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babelPluginAxiom aliased imports 1`] = `
"import _default5 from '@brandwatch/axiom-utils/dist/findComponent';
import _default4 from '@brandwatch/axiom-charts/dist/DotPlotChart/DotPlotChart';
import _default3 from '@brandwatch/axiom-components/dist/Base/Base';
import _default2 from '@brandwatch/axiom-formatting/dist/longDate';
import _default from '@brandwatch/axiom-formatting/dist/shortDate';
/* eslint-disable no-console */

const shortDate = () => {};
const longDate = () => {};
const Base = () => {};
const DotPlotChart = () => {};
const findComponent = () => {};

console.log(shortDate);
console.log(longDate);
console.log(Base);
console.log(DotPlotChart);
console.log(findComponent);

console.log(_default);
console.log(_default2);
console.log(_default3);
console.log(_default4);
console.log(_default5);"
`;

exports[`babelPluginAxiom all imports 1`] = `
"/* eslint-disable no-console */

import * as materials from '@brandwatch/axiom-materials';

console.log(materials.colors);"
`;

exports[`babelPluginAxiom destructured imports 1`] = `
"import * as _ from '@brandwatch/axiom-materials/dist/colors';
import _default5 from '@brandwatch/axiom-utils/dist/findComponent';
import _default4 from '@brandwatch/axiom-charts/dist/DotPlotChart/DotPlotChart';
import _default3 from '@brandwatch/axiom-components/dist/Base/Base';
import _default2 from '@brandwatch/axiom-formatting/dist/longDate';
import _default from '@brandwatch/axiom-formatting/dist/shortDate';


console.log(_default); /* eslint-disable no-console */

console.log(_default2);
console.log(_default3);
console.log(_default4);
console.log(_default5);
console.log(_);
console.log(_.productColorNames);"
`;

exports[`babelPluginAxiom direct import 1`] = `
"/* eslint-disable no-console */

import materials from '@brandwatch/axiom-materials';

console.log(materials.colors);"
`;

exports[`babelPluginAxiom property access 1`] = `
"import * as _ from '@brandwatch/axiom-materials/dist/colors';


console.log(_.foo); /* eslint-disable no-console */

console.log(_['foo']);
console.log(_['foo-bar']);"
`;

exports[`babelPluginAxiom scoped imports 1`] = `
"import _default from '@brandwatch/axiom-utils/dist/findComponent';


const foo = findComponent => findComponent(); /* eslint-disable no-console */

const bar = () => _default();

foo(_default);
bar();"
`;

exports[`babelPluginAxiom used as defaults 1`] = `
"import * as _ from '@brandwatch/axiom-materials/dist/colors';


const productColors = Object.keys(_.productColorNames); /* eslint-disable no-console */

const fn = (colors = productColors) => {
  console.log(colors);
};

fn();"
`;
